Fix button text align

--- a/style/button.css
+++ b/style/button.css
@@ -2,11 +2,11 @@
   display: flex;
   padding: .75rem 1.25rem;
   align-items: center;
-  max-width: fit-content;
 
   border-radius: .5rem;
 
   font: var(--button);
+  text-align: center;
   color: var(--text-title);
   
   &.primary{
